# galley

./: .gitignore  .prettierignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  SECURITY.md  eslint.config.js  justfile  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  rust-toolchain.toml
.github/workflows/: ci.yml  release.yml
apps/desktop/: index.html  package.json  playwright.config.ts  playwright.screenshots.config.ts  tsconfig.json  tsconfig.node.json  vite.config.ts  vitest.config.ts
apps/desktop/e2e/: smoke.spec.ts
apps/desktop/media/: capture.spec.ts  demo.spec.ts  install-shot.spec.ts
apps/desktop/src/: App.svelte  app.css  main.ts  vite-env.d.ts
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/icons/: icon.icns
apps/desktop/src-tauri/src/: ai.rs  lib.rs  main.rs
apps/desktop/src/lib/: AgentPanel.svelte  AiChatPanel.svelte  AiSettingsPanel.svelte  AssetPanel.svelte  BibPanel.svelte  CommandPalette.svelte  EditorPane.svelte  ExportPanel.svelte  FormatBar.svelte  HistoryPanel.svelte  ImportWizard.svelte  MathEditor.svelte  OnboardingTour.svelte  OutlinePanel.svelte  PreviewPane.svelte  ProblemsPanel.svelte  ProjectDashboard.svelte  Resizer.svelte  ReviewPanel.svelte  SearchPanel.svelte  Settings.svelte  Sidebar.svelte  StatusBar.svelte  SymbolPalette.svelte  TableBuilder.svelte  TemplateGallery.svelte  Titlebar.svelte  UnsavedGuard.svelte  UpdateBanner.svelte  agent-backend.ts  agents.ts  ai-backend.ts  asset-backend.ts  assets.ts  assistant.ts  autonomous.ts  bell.ts  bib-backend.ts  bibliography.ts  brand.ts  (+48 more)
apps/desktop/src/lib/locales/: en.ts
apps/desktop/tests/: AgentPanel.test.ts  AiChatPanel.test.ts  AiSettingsPanel.test.ts  App.test.ts  AssetPanel.test.ts  BibPanel.test.ts  CommandPalette.test.ts  EditorPane.test.ts  FormatBar.test.ts  HistoryPanel.test.ts  ImportWizard.test.ts  MathEditor.test.ts  OnboardingTour.test.ts  OutlinePanel.test.ts  PreviewPane.test.ts  ProblemsPanel.test.ts  ProjectDashboard.test.ts  Resizer.test.ts  ReviewPanel.test.ts  SearchPanel.test.ts  Settings.test.ts  Sidebar.test.ts  StatusBar.test.ts  SymbolPalette.test.ts  TableBuilder.test.ts  TemplateGallery.test.ts  Titlebar.test.ts  UnsavedGuard.test.ts  UpdateBanner.test.ts  agent-backend.test.ts  agents.test.ts  ai-backend.test.ts  asset-backend.test.ts  assets.test.ts  assistant.test.ts  autonomous.test.ts  bell.test.ts  bib-backend.test.ts  bibliography.test.ts  brand.test.ts  (+49 more)
crates/galley-ai/: Cargo.toml
crates/galley-ai/src/: lib.rs  mcp.rs
crates/galley-compile/: Cargo.toml
crates/galley-compile/src/: cache.rs  lib.rs  tectonic_engine.rs
crates/galley-compile/tests/: real_compile.rs
crates/galley-core/: Cargo.toml
crates/galley-core/src/: agents.rs  ai.rs  assets.rs  assistant.rs  bibliography.rs  checkpoint.rs  compile.rs  diagnostics.rs  document.rs  export.rs  hash.rs  import.rs  include_graph.rs  intel.rs  lib.rs  manifest.rs  math.rs  perf.rs  project.rs  sandbox.rs  search.rs  synctex.rs  table.rs  time.rs  vcs.rs
crates/galley-import/: Cargo.toml
crates/galley-import/src/: archive.rs  lib.rs
crates/galley-intel/: Cargo.toml
crates/galley-intel/src/: client.rs  framing.rs  lib.rs  mapping.rs  protocol.rs  synctex.rs
crates/galley-intel/tests/: real_lsp.rs
crates/galley-security/: Cargo.toml
crates/galley-security/src/: lib.rs
crates/galley-vcs/: Cargo.toml
crates/galley-vcs/src/: git2_history.rs  lib.rs
docs/: accessibility.md  download.md  i18n.md  install.md  migration.md  packaging.md  performance.md  privacy.md  release-readiness.md  user-guide.md
docs/adr/: 0001-stack.md  0002-coverage-and-bootstrap-exclusion.md  0003-design-tokens-and-theming.md  0004-ui-kit-component-library.md  0005-project-model-and-sandboxed-filestore.md  0006-embedded-compile-and-preview.md  0007-fast-incremental-compilation.md  0008-compile-diagnostics.md  0009-language-server-texlab.md  0010-include-graph-and-root-compile.md  0011-power-editing.md  0012-synctex-bidirectional-navigation.md  0013-assets-figures.md  0014-math-tables.md  0015-bibliography.md  0016-visual-editor-decoration.md  0017-visual-editor-editing-commands.md  0018-visual-layout-drag-drop-review.md  0019-ai-provider-gateway.md  0020-ai-chat-assistant-panel.md  0021-multi-agent-orchestration.md  0022-autonomous-mode-revert.md  0023-git-backed-version-history.md  0024-migration-import.md  0025-project-organization.md  0026-template-gallery.md  0027-export-formats.md  0028-security-hardening.md  0029-performance-low-spec.md  0030-accessibility-i18n-onboarding.md  0031-packaging-installers.md  0032-beta.md  0033-release-candidate.md  0034-one-command-install-update.md  0035-bug-sweep-v0.9.4.md  0036-windows-installer-trust.md  README.md
docs/ai/: agents.md
docs/assets/: galley-demo.webm
docs/security/: threat-model.md
scripts/ci/: audit.sh  build.sh  bundle-gate.sh  cover.sh  docs-gate.sh  format.sh  lint.sh
scripts/install/: install.ps1  install.sh
scripts/media/: demo.sh
scripts/release/: checksums.sh
