[package]
name = "galley-ai"
description = "AI gateway: provider-agnostic LLM adapters, the agent orchestrator, and the MCP tool host."
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
rust-version.workspace = true

[lints]
workspace = true
