[package]
name = "galley-ai"
description = "AI gateway: provider-agnostic LLM adapters, the agent orchestrator, and the MCP tool host."
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
galley-core = { workspace = true }

[dev-dependencies]
# cell needed for the configurable mock provider
# (no external dep — std::cell::Cell is sufficient)

[lints]
workspace = true
