[package]
name = "galley-import"
description = "Import adapters: folder/zip/git/arXiv importers plus the parse-only ProjectAnalyzer."
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
galley-core = { workspace = true }
galley-security = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }

[lints]
workspace = true
