[package]
name = "galley-intel"
description = "Language intelligence adapters: TexLab (LSP) client and SyncTeX forward/inverse mapping."
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
rust-version.workspace = true

[lints]
workspace = true
