[package]
name = "galley-vcs"
description = "Version-control adapter: git2/libgit2 history, snapshots, shadow branches, diffs and revert."
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
rust-version.workspace = true

[lints]
workspace = true
